Fix overlapping div: ui-elements

--- a/public/style/general.css
+++ b/public/style/general.css
@@ -36,6 +36,10 @@ canvas {
     pointer-events: none;
 }
 
+#ui-elements * {
+    pointer-events: auto;
+}
+
 .hidden {
     display: none;
 }
